--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-My Page
+<h1>Javascript30</h1>
+<ul>
+  <li>
+    <a href="/01/index.html">JavaScript Drum Kit</a>
+    <div>Goal: Simple drum kit using audio elements activated by keydown events.</div>
+    <div>Extras: Added one track looper activated by spacebar. Click events trigger sounds as well.</div>
+  </li>
+</ul>
