updated index page to valid html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Javascript 30 | Shane Gerhardt</title>
+  <meta name="description" content="A listing of the projects in the Javascript 30 course by Wes Bos as completed by Shane Gerhardt">
+  <link rel="canonical" href="https://www.shanegerhardt.com/javascript30/">
+  <link rel="alternate" type="application/rss+xml" title="Shane Gerhardt" href="https://www.shanegerhardt.com/feed.xml">
+</head>
+<body>
 <h1>Javascript30</h1>
 <ul>
   <li>
@@ -6,3 +19,5 @@
     <div>Extras: Added one track looper activated by spacebar. Click events trigger sounds as well.</div>
   </li>
 </ul>
+</body>
+</html>
